# griffe-typingdoc

./: .copier-answers.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: flake8.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_889c928ead7051de__docstrings_py.html  d_889c928ead7051de__dynamic_py.html  d_889c928ead7051de__extension_py.html  d_889c928ead7051de__static_py.html  d_889c928ead7051de_debug_py.html  d_889c928ead7051de_extension_py.html  d_889c928ead7051de_typing_doc_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_extension_py.html  function_index.html  index.html  status.json  z_83955248828a2870___init___py.html  z_83955248828a2870_debug_py.html  z_83955248828a2870_docstrings_py.html  z_83955248828a2870_dynamic_py.html  z_83955248828a2870_extension_py.html  z_83955248828a2870_static_py.html  z_889c928ead7051de__docstrings_py.html  z_889c928ead7051de__dynamic_py.html  z_889c928ead7051de__extension_py.html  z_889c928ead7051de__static_py.html  z_889c928ead7051de_debug_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_extension_py.html
credits/: index.html
docs/: examples.md
docs/.overrides/partials/: comments.html
docs/examples/: enhanced.py  simple.py
docs/reference/: api.md
examples/: index.html  simple.py
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/griffe_typingdoc/: index.html
reference/griffe_typingdoc/debug/: index.html
reference/griffe_typingdoc/extension/: index.html
scripts/: gen_credits.py  setup.sh
search/: search_index.json
src/griffe_typingdoc/: __init__.py  __main__.py  _docstrings.py  _dynamic.py  _extension.py  _static.py  cli.py  debug.py  extension.py  typing_doc.py
src/griffe_typingdoc/_internal/: debug.py  docstrings.py  dynamic.py  extension.py  static.py
tests/: __init__.py  test_api.py  test_cli.py  test_extension.py
