[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "griffe-typingdoc"
description = "Griffe extension for PEP 727 – Documentation Metadata in Typing."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "griffe>=0.38",
    "typing-extensions>=4.7",
]

[project.urls]
Homepage = "https://mkdocstrings.github.io/griffe-typingdoc"
Documentation = "https://mkdocstrings.github.io/griffe-typingdoc"
Changelog = "https://mkdocstrings.github.io/griffe-typingdoc/changelog"
Repository = "https://github.com/mkdocstrings/griffe-typingdoc"
Issues = "https://github.com/mkdocstrings/griffe-typingdoc/issues"
Discussions = "https://github.com/mkdocstrings/griffe-typingdoc/discussions"
Gitter = "https://gitter.im/mkdocstrings/griffe-typingdoc"
Funding = "https://github.com/sponsors/pawamoy"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "devdeps.txt",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
